tests/snapshots/tokenize__enum.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nint at 15:1\nIdentifier(main) at 15:5\n( at 15:9\n) at 15:10\n{ at 15:12\nIdentifier(assert) at 16:3\n( at 16:9\nIntLiteral(0, None) at 16:10\n, at 16:11\n( at 16:13\n{ at 16:14\nenum at 16:16\n{ at 16:21\nIdentifier(zero) at 16:23\n, at 16:27\nIdentifier(one) at 16:29\n, at 16:32\nIdentifier(two) at 16:34\n} at 16:38\n; at 16:39\nIdentifier(zero) at 16:41\n; at 16:45\n} at 16:47\n) at 16:48\n, at 16:49\nStringLiteral(\"({ enum { zero, one, two }; zero; })\") at 16:51\n) at 16:89\n; at 16:90\nIdentifier(assert) at 17:3\n( at 17:9\nIntLiteral(1, None) at 17:10\n, at 17:11\n( at 17:13\n{ at 17:14\nenum at 17:16\n{ at 17:21\nIdentifier(zero) at 17:23\n, at 17:27\nIdentifier(one) at 17:29\n, at 17:32\nIdentifier(two) at 17:34\n} at 17:38\n; at 17:39\nIdentifier(one) at 17:41\n; at 17:44\n} at 17:46\n) at 17:47\n, at 17:48\nStringLiteral(\"({ enum { zero, one, two }; one; })\") at 17:50\n) at 17:87\n; at 17:88\nIdentifier(assert) at 18:3\n( at 18:9\nIntLiteral(2, None) at 18:10\n, at 18:11\n( at 18:13\n{ at 18:14\nenum at 18:16\n{ at 18:21\nIdentifier(zero) at 18:23\n, at 18:27\nIdentifier(one) at 18:29\n, at 18:32\nIdentifier(two) at 18:34\n} at 18:38\n; at 18:39\nIdentifier(two) at 18:41\n; at 18:44\n} at 18:46\n) at 18:47\n, at 18:48\nStringLiteral(\"({ enum { zero, one, two }; two; })\") at 18:50\n) at 18:87\n; at 18:88\nIdentifier(assert) at 19:3\n( at 19:9\nIntLiteral(5, None) at 19:10\n, at 19:11\n( at 19:13\n{ at 19:14\nenum at 19:16\n{ at 19:21\nIdentifier(five) at 19:23\n= at 19:27\nIntLiteral(5, None) at 19:28\n, at 19:29\nIdentifier(six) at 19:31\n, at 19:34\nIdentifier(seven) at 19:36\n} at 19:42\n; at 19:43\nIdentifier(five) at 19:45\n; at 19:49\n} at 19:51\n) at 19:52\n, at 19:53\nStringLiteral(\"({ enum { five=5, six, seven }; five; })\") at 19:55\n) at 19:97\n; at 19:98\nIdentifier(assert) at 20:3\n( at 20:9\nIntLiteral(6, None) at 20:10\n, at 20:11\n( at 20:13\n{ at 20:14\nenum at 20:16\n{ at 20:21\nIdentifier(five) at 20:23\n= at 20:27\nIntLiteral(5, None) at 20:28\n, at 20:29\nIdentifier(six) at 20:31\n, at 20:34\nIdentifier(seven) at 20:36\n} at 20:42\n; at 20:43\nIdentifier(six) at 20:45\n; at 20:48\n} at 20:50\n) at 20:51\n, at 20:52\nStringLiteral(\"({ enum { five=5, six, seven }; six; })\") at 20:54\n) at 20:95\n; at 20:96\nIdentifier(assert) at 21:3\n( at 21:9\nIntLiteral(0, None) at 21:10\n, at 21:11\n( at 21:13\n{ at 21:14\nenum at 21:16\n{ at 21:21\nIdentifier(zero) at 21:23\n, at 21:27\nIdentifier(five) at 21:29\n= at 21:33\nIntLiteral(5, None) at 21:34\n, at 21:35\nIdentifier(three) at 21:37\n= at 21:42\nIntLiteral(3, None) at 21:43\n, at 21:44\nIdentifier(four) at 21:46\n} at 21:51\n; at 21:52\nIdentifier(zero) at 21:54\n; at 21:58\n} at 21:60\n) at 21:61\n, at 21:62\nStringLiteral(\"({ enum { zero, five=5, three=3, four }; zero; })\") at 21:64\n) at 21:115\n; at 21:116\nIdentifier(assert) at 22:3\n( at 22:9\nIntLiteral(5, None) at 22:10\n, at 22:11\n( at 22:13\n{ at 22:14\nenum at 22:16\n{ at 22:21\nIdentifier(zero) at 22:23\n, at 22:27\nIdentifier(five) at 22:29\n= at 22:33\nIntLiteral(5, None) at 22:34\n, at 22:35\nIdentifier(three) at 22:37\n= at 22:42\nIntLiteral(3, None) at 22:43\n, at 22:44\nIdentifier(four) at 22:46\n} at 22:51\n; at 22:52\nIdentifier(five) at 22:54\n; at 22:58\n} at 22:60\n) at 22:61\n, at 22:62\nStringLiteral(\"({ enum { zero, five=5, three=3, four }; five; })\") at 22:64\n) at 22:115\n; at 22:116\nIdentifier(assert) at 23:3\n( at 23:9\nIntLiteral(3, None) at 23:10\n, at 23:11\n( at 23:13\n{ at 23:14\nenum at 23:16\n{ at 23:21\nIdentifier(zero) at 23:23\n, at 23:27\nIdentifier(five) at 23:29\n= at 23:33\nIntLiteral(5, None) at 23:34\n, at 23:35\nIdentifier(three) at 23:37\n= at 23:42\nIntLiteral(3, None) at 23:43\n, at 23:44\nIdentifier(four) at 23:46\n} at 23:51\n; at 23:52\nIdentifier(three) at 23:54\n; at 23:59\n} at 23:61\n) at 23:62\n, at 23:63\nStringLiteral(\"({ enum { zero, five=5, three=3, four }; three; })\") at 23:65\n) at 23:117\n; at 23:118\nIdentifier(assert) at 24:3\n( at 24:9\nIntLiteral(4, None) at 24:10\n, at 24:11\n( at 24:13\n{ at 24:14\nenum at 24:16\n{ at 24:21\nIdentifier(zero) at 24:23\n, at 24:27\nIdentifier(five) at 24:29\n= at 24:33\nIntLiteral(5, None) at 24:34\n, at 24:35\nIdentifier(three) at 24:37\n= at 24:42\nIntLiteral(3, None) at 24:43\n, at 24:44\nIdentifier(four) at 24:46\n} at 24:51\n; at 24:52\nIdentifier(four) at 24:54\n; at 24:58\n} at 24:60\n) at 24:61\n, at 24:62\nStringLiteral(\"({ enum { zero, five=5, three=3, four }; four; })\") at 24:64\n) at 24:115\n; at 24:116\nIdentifier(assert) at 25:3\n( at 25:9\nIntLiteral(4, None) at 25:10\n, at 25:11\n( at 25:13\n{ at 25:14\nenum at 25:16\n{ at 25:21\nIdentifier(zero) at 25:23\n, at 25:27\nIdentifier(one) at 25:29\n, at 25:32\nIdentifier(two) at 25:34\n} at 25:38\nIdentifier(x) at 25:40\n; at 25:41\nsizeof at 25:43\n( at 25:49\nIdentifier(x) at 25:50\n) at 25:51\n; at 25:52\n} at 25:54\n) at 25:55\n, at 25:56\nStringLiteral(\"({ enum { zero, one, two } 4; sizeof(4); })\") at 25:58\n) at 25:103\n; at 25:104\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(4, None) at 26:10\n, at 26:11\n( at 26:13\n{ at 26:14\nenum at 26:16\nIdentifier(t) at 26:21\n{ at 26:23\nIdentifier(zero) at 26:25\n, at 26:29\nIdentifier(one) at 26:31\n, at 26:34\nIdentifier(two) at 26:36\n} at 26:40\n; at 26:41\nenum at 26:43\nIdentifier(t) at 26:48\nIdentifier(y) at 26:50\n; at 26:51\nsizeof at 26:53\n( at 26:59\nIdentifier(y) at 26:60\n) at 26:61\n; at 26:62\n} at 26:64\n) at 26:65\n, at 26:66\nStringLiteral(\"({ enum t { zero, one, two }; enum t ({ enum t { zero, one, two }; enum t y; sizeof(y); }); sizeof(({ enum t { zero, one, two }; enum t y; sizeof(y); })); })\") at 26:68\n) at 26:227\n; at 26:228\nIdentifier(printf) at 28:3\n( at 28:9\nStringLiteral(\"OK\n\") at 28:10\n) at 28:16\n; at 28:17\nreturn at 29:3\nIntLiteral(0, None) at 29:10\n; at 29:11\n} at 30:1\nEOF at 31:1\n"
stderr: ""
status: 0
