tests/snapshots/tokenize__errno_header.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "extern at 3:1\nint at 3:8\n* at 3:12\nIdentifier(__errno_location) at 3:13\n( at 3:29\nvoid at 3:30\n) at 3:34\n; at 3:35\nint at 8:1\nIdentifier(main) at 8:5\n( at 8:9\n) at 8:10\n{ at 8:12\nint at 9:5\nIdentifier(err) at 9:9\n= at 9:13\nIntLiteral(33, None) at 9:15\n+ at 9:18\nIntLiteral(34, None) at 9:20\n; at 9:22\nif at 10:5\n( at 10:8\nIdentifier(err) at 10:9\n<= at 10:13\nIntLiteral(0, None) at 10:16\n) at 10:17\n{ at 10:19\nreturn at 11:9\nIntLiteral(1, None) at 11:16\n; at 11:17\n} at 12:5\nreturn at 13:5\nIntLiteral(0, None) at 13:12\n; at 13:13\n} at 14:1\nEOF at 15:1\n"
stderr: ""
status: 0
