tests/snapshots/tokenize__extern.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\nextern at 25:1\nint at 25:8\nIdentifier(ext1) at 25:12\n; at 25:16\nextern at 26:1\nint at 26:8\n* at 26:12\nIdentifier(ext2) at 26:13\n; at 26:17\nIdentifier(inline) at 28:1\nint at 28:8\nIdentifier(inline_fn) at 28:12\n( at 28:21\nvoid at 28:22\n) at 28:26\n{ at 28:28\nreturn at 29:3\nIntLiteral(3, None) at 29:10\n; at 29:11\n} at 30:1\nint at 32:1\nIdentifier(main) at 32:5\n( at 32:9\n) at 32:10\n{ at 32:12\nIdentifier(assert) at 33:3\n( at 33:9\nIntLiteral(5, None) at 33:10\n, at 33:11\nIdentifier(ext1) at 33:13\n, at 33:17\nStringLiteral(\"ext1\") at 33:19\n) at 33:25\n; at 33:26\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(5, None) at 34:10\n, at 34:11\n* at 34:13\nIdentifier(ext2) at 34:14\n, at 34:18\nStringLiteral(\"*ext2\") at 34:20\n) at 34:27\n; at 34:28\nextern at 36:3\nint at 36:10\nIdentifier(ext3) at 36:14\n; at 36:18\nIdentifier(assert) at 37:3\n( at 37:9\nIntLiteral(7, None) at 37:10\n, at 37:11\nIdentifier(ext3) at 37:13\n, at 37:17\nStringLiteral(\"ext3\") at 37:19\n) at 37:25\n; at 37:26\nint at 39:3\nIdentifier(ext_fn1) at 39:7\n( at 39:14\nint at 39:15\nIdentifier(x) at 39:19\n) at 39:20\n; at 39:21\nIdentifier(assert) at 40:3\n( at 40:9\nIntLiteral(5, None) at 40:10\n, at 40:11\nIdentifier(ext_fn1) at 40:13\n( at 40:20\nIntLiteral(5, None) at 40:21\n) at 40:22\n, at 40:23\nStringLiteral(\"ext_fn1(5)\") at 40:25\n) at 40:37\n; at 40:38\nextern at 42:3\nint at 42:10\nIdentifier(ext_fn2) at 42:14\n( at 42:21\nint at 42:22\nIdentifier(x) at 42:26\n) at 42:27\n; at 42:28\nIdentifier(assert) at 43:3\n( at 43:9\nIntLiteral(8, None) at 43:10\n, at 43:11\nIdentifier(ext_fn2) at 43:13\n( at 43:20\nIntLiteral(8, None) at 43:21\n) at 43:22\n, at 43:23\nStringLiteral(\"ext_fn2(8)\") at 43:25\n) at 43:37\n; at 43:38\nIdentifier(printf) at 45:3\n( at 45:9\nStringLiteral(\"OK\n\") at 45:10\n) at 45:16\n; at 45:17\nreturn at 46:3\nIntLiteral(0, None) at 46:10\n; at 46:11\n} at 47:1\nEOF at 48:1\n"
stderr: ""
status: 0
