tests/snapshots/tokenize__float_exponent.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\ndouble at 3:5\nIdentifier(x) at 3:12\n= at 3:14\nFloatLiteral(15000000000, None) at 3:16\n; at 3:22\ndouble at 4:5\nIdentifier(y) at 4:12\n= at 4:14\nFloatLiteral(0.0025, None) at 4:16\n; at 4:22\nreturn at 5:5\nIntLiteral(0, None) at 5:12\n; at 5:13\n} at 6:1\nEOF at 7:1\n"
stderr: ""
status: 0
